updated the mod wiki